kubernetes/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: hotel-app
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hotel-app
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: hotel-app
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort
